add an index to the book

--- a/mo.tex
+++ b/mo.tex
@@ -21,7 +21,7 @@ Our \emph{real} goal in this Case Study, however, is to introduce one of the mai
 Our goal is a sequence of theorems about the unoriented bordism spectrum $MO$.  We will begin by recalling a definition of the spectrum $MO$ using just abstract homotopy theory, because it involves ideas that will be useful to us throughout the semester and because we cannot compute effectively with the chain-level definition given in the Introduction.
 
 \begin{definition}
-For a spherical bundle $S^{n-1} \to \xi \to X$, its Thom space is given by the cofiber \[\xi \to X \xrightarrow{\text{cofiber}} T_n(\xi).\]
+For a spherical bundle $S^{n-1} \to \xi \to X$, its \idxentry{Thom space} is given by the cofiber \[\xi \to X \xrightarrow{\text{cofiber}} T_n(\xi).\]
 \end{definition}
 \begin{proof}[``Proof'' of definition]
 There is a more classical construction of the Thom space: take the associated disk bundle by gluing an $n$--disk fiberwise, and add a point at infinity by collapsing $\xi$:\todo{What is this $\sqcup'$ notation?} \[T_n(\xi) = (\xi \sqcup'_{S^{n-1}} D^n)^+.\]  To compare this with the cofiber definition, recall that the thickening of $\xi$ to an $n$--disk bundle is the same as taking the mapping cylinder on $\xi \to X$.  Since the inclusion into the mapping cylinder is now a cofibration, the quotient by this subspace agrees with both the cofiber of the map and the introduction of a point at infinity.
@@ -68,12 +68,12 @@ BO(n) \arrow[equal]{r} & BO(n) \times * \arrow["\operatorname{id} \times \text{t
 \end{tikzcd}
 \end{center}
 \begin{corollary}\label{DefnRealJHomomorphism}
-The operations of block--sum and topological join imbue the colimiting spaces $BO$ and $B\GL_1 \S$ with the structure of $H$--groups\todo{Should you justify ``group'' rather than ``space''?}.  Moreover, the colimiting map \[J_{\R}\co BO \to B\GL_1 \S,\] called the \textit{stable $J$--homomorphism}, is a morphism of $H$--groups. \qed
+The operations of block--sum and topological join imbue the colimiting spaces $BO$ and $B\GL_1 \S$ with the structure of $H$--groups\todo{Should you justify ``group'' rather than ``space''?}.  Moreover, the colimiting map \[J_{\R}\co BO \to B\GL_1 \S,\] called the \idxentry[J homomorphism]{$J$--homomorphism}, is a morphism of $H$--groups. \qed
 \end{corollary}
 \noindent Finally, we can ask about the compatibility of Thom constructions with all of this.  In order to properly phrase the question, we need a version of the construction which operates on stable spherical bundles, i.e., whose source is the slice category over $B\GL_1 \S$.  By calculating\todo{Does this calculation need justification?} \[T_{n+1}(\xi \ast \text{triv}) \simeq \Susp T_n(\xi),\] we are inspired to make the following definition:
 
 \begin{definition}
-For $\xi$ an $S^{n-1}$--bundle, we define the \textit{Thom spectrum} of $\xi$ to be \[T(\xi) := \Susp^{-n} \Susp^\infty T_n(\xi).\]  By filtering the base space by compact subspaces, this begets a functor \[T\co \CatOf{Spaces}_{/ B\GL_1 \S} \to \CatOf{Spectra}.\]
+For $\xi$ an $S^{n-1}$--bundle, we define the \idxentry{Thom spectrum} of $\xi$ to be \[T(\xi) := \Susp^{-n} \Susp^\infty T_n(\xi).\]  By filtering the base space by compact subspaces, this begets a functor \[T\co \CatOf{Spaces}_{/ B\GL_1 \S} \to \CatOf{Spectra}.\]
 \end{definition}
 
 \begin{lemma}\label{ThomSpacesAreMonoidal}
@@ -81,12 +81,12 @@ $T$ is monoidal: it carries external fiberwise joins to smash products of Thom s
 \end{lemma}
 
 \begin{definition}\label{DefnOfMO}
-The spectrum $MO$ arises as the universal example of all these constructions, strung together:
+The spectrum \idxentry[MO]{$MO$} arises as the universal example of all these constructions, strung together:
 \[MO := T(J_{\R}) = \colim_n T(J_{\R}^n) = \colim_n \Susp^{-n} T_n J_{\R}^n.\]
 \end{definition}
 \citeme{There should be a reference here (to Pontryagin, presumably) saying that we recover $MO$ as defined on the first day.}
 
-The spectrum $MO$ has several remarkable properties.  The most basic such property is that it is a ring spectrum, and this follows immediately from $J_{\R}$ being a homomorphism of $H$--spaces.  Much more excitingly, we can also deduce the presence of Thom isomorphisms just from the properties stated thus far.  That $J_{\R}$ is a homomorphism means that the following square commutes:
+The spectrum $MO$ has several remarkable properties.  The most basic such property is that it is a ring spectrum, and this follows immediately from $J_{\R}$ being a homomorphism of $H$--spaces.  Much more excitingly, we can also deduce the presence of \index{Thom isomorphism}Thom isomorphisms just from the properties stated thus far.  That $J_{\R}$ is a homomorphism means that the following square commutes:
 \begin{center}
 \begin{tikzcd}
 BO \times BO \rar["\sigma",equiv'] \arrow[bend right]{rrd} & BO \times BO \arrow{r}{\mu} \arrow{d}{J_{\R} \times J_{\R}} & BO \arrow{d}{J_{\R}} \\
@@ -115,7 +115,7 @@ The equivalence is one of $MO$--modules because the $MO$--module structure of bo
 \noindent From here, the general version of Thom's theorem follows quickly:
 
 \begin{definition}
-A map $\phi\co MO \to E$ of homotopy ring spectra is called an \textit{orientation} of $E$ (by $MO$).\footnote{Later, we will refer to analogous ring spectrum maps $MU \to E$ off of the complex bordism spectrum as \textit{complex-orientations} of $E$.  However, calling ring maps $MO \to E$ ``unoriented-orientations'' is rightfully considered distasteful.}
+A map $\phi\co MO \to E$ of homotopy ring spectra is called an \idxentry{orientation} of $E$ (by $MO$).\footnote{Later, we will refer to analogous ring spectrum maps $MU \to E$ off of the complex bordism spectrum as \textit{complex-orientations} of $E$.  However, calling ring maps $MO \to E$ ``unoriented-orientations'' is rightfully considered distasteful.}
 \end{definition}
 
 \begin{theorem}[Thom isomorphism]\label{GeneralThomIsom}
@@ -175,7 +175,7 @@ This powers an induction that shows that $\HFtwo_* \RP^\infty$ has a single clas
 
 An abbreviated summary of this book is that we are going to put ``$\Spec$'' in front of rings appearing in algebraic topology and see what happens.  Before actually doing any algebraic topology, we should recall what this means on the level of algebra.  The core idea is to replace an $\F_2$--algebra $R$ by the functor it corepresents, which we will denote by $\Spec R$.  For any other ``test $\F_2$--algebra'' $T$, we set \[(\Spec R)(T) := \CatOf{Algebras}_{\F_2/}(R, T) \cong \CatOf{Schemes}_{/\F_2}(\Spec T, \Spec R).\]  More generally, we have the following definition:
 \begin{definition}\label{DefnAffineF2Scheme}
-An \textit{affine $\F_2$--scheme} is a functor $X: \CatOf{Algebras}_{\F_2/} \to \CatOf{Sets}$ which is (noncanonically) isomorphic to $\Spec R$ for some $\F_2$--algebra $R$.  Given such an isomorphism, we will refer to $\Spec R \to X$ as a \textit{parameter} for $X$ and its inverse $X \to \Spec R$ as a \textit{coordinate} for $X$.
+An \index{scheme!affine}\textit{affine $\F_2$--scheme} is a functor $X: \CatOf{Algebras}_{\F_2/} \to \CatOf{Sets}$ which is (noncanonically) isomorphic to $\Spec R$ for some $\F_2$--algebra $R$.  Given such an isomorphism, we will refer to $\Spec R \to X$ as a \idxentry{parameter} for $X$ and its inverse $X \to \Spec R$ as a \idxentry{coordinate} for $X$.
 \end{definition}
 
 \begin{lemma}
@@ -193,12 +193,12 @@ Set $R_n = \F_2[x_1, \ldots, x_n]$.  Elements of $(\Spec R_n)(T)$ can be identif
 \begin{align*}
 \mathbb A^n & := \Spec \F_2[x_1, \ldots, x_n], & \mathbb A^{n, J} & := \Spec \F_2[x_1, \ldots, x_n] / (x_k^{j_k+1}).
 \end{align*}
-The functor $\mathbb A^n$ is called \textit{affine $n$--space}---reasonable, since the value $\mathbb A^n(T)$ is isomorphic to $T^n$.  In particular, we refer to $\mathbb A^1$ as the \textit{affine line}.  Note that the quotient map $R_1 \to R_1^{(j)}$ induces an inclusion $\mathbb A^{1, (j)} \to \mathbb A^1$ and that $\mathbb A^{1, (0)}$ is a constant functor: \[\mathbb A^{1, (0)}(T) = \{f: \F_2[x] \to T \mid f(x) = 0\}.\]  Accordingly, we declare ``$\mathbb A^{1, (0)}$'' to be the \textit{origin on the affine line} and $\mathbb A^{1, (j)}$ to be the \textit{$(n+1)${\st} order (nilpotent) neighborhood of the origin} in the affine line.
+The functor $\mathbb A^n$ is called \idxentry[affine n space]{affine $n$--space}---reasonable, since the value $\mathbb A^n(T)$ is isomorphic to $T^n$.  In particular, we refer to $\mathbb A^1$ as the \idxentry{affine line}.  Note that the quotient map $R_1 \to R_1^{(j)}$ induces an inclusion $\mathbb A^{1, (j)} \to \mathbb A^1$ and that $\mathbb A^{1, (0)}$ is a constant functor: \[\mathbb A^{1, (0)}(T) = \{f: \F_2[x] \to T \mid f(x) = 0\}.\]  Accordingly, we declare ``$\mathbb A^{1, (0)}$'' to be the \textit{origin on the affine line} and $\mathbb A^{1, (j)}$ to be the \textit{$(n+1)${\st} order (nilpotent) neighborhood of the origin} in the affine line.
 \end{example}
 
 We can also use this language to re-express another common object arising in algebraic topology: the Hopf algebra, which appears when taking the mod--$2$ cohomology of an $H$--group.  In addition to the usual ring structure on cohomology groups, the $H$--group multiplication, unit, and inversion maps additionally induce a diagonal map $\Delta$, an augmentation map $\eps$, and an antipode $\chi$ respectively.  Running through the axioms, one quickly checks the following:
 \begin{lemma}
-For a Hopf $\F_2$--algebra $R$, the functor $\Spec R$ is naturally valued in groups.  Such functors are called \textit{group schemes}.  Conversely, a choice of group structure on $\Spec R$ endows $R$ with the structure of a Hopf algebra.
+For a Hopf $\F_2$--algebra $R$, the functor $\Spec R$ is naturally valued in groups.  Such functors are called \idxentry{group scheme}.  Conversely, a choice of group structure on $\Spec R$ endows $R$ with the structure of a \index{Hopf algebra}\textit{Hopf algebra}.
 \end{lemma}
 \begin{proof}[Proof sketch]
 This is a matter of recognizing the product in $\CatOf{Algebras}_{\F_2/}^{\mathrm{op}}$ as the tensor product, then using the Yoneda lemma to transfer structure around.
@@ -231,7 +231,7 @@ In fact, $\mathbb A^1$ is naturally valued in \emph{rings}. It models the invers
 \end{remark}
 
 \begin{example}
-We define the \textit{multiplicative group scheme} by \[\mathbb G_m = \Spec \F_2[x, y] / (xy - 1).\]  Its value $\mathbb G_m(T)$ on a test algebra $T$ is the set of pairs $(x, y)$ such that $y$ is a multiplicative inverse to $x$, and hence $\mathbb G_m$ is valued in groups.  Applying the Yoneda lemma, we deduce the following formulas for the Hopf algebra structure maps:
+We define the \index{group scheme!multiplicative}\textit{multiplicative group scheme} by \[\mathbb G_m = \Spec \F_2[x, y] / (xy - 1).\]  Its value $\mathbb G_m(T)$ on a test algebra $T$ is the set of pairs $(x, y)$ such that $y$ is a multiplicative inverse to $x$, and hence $\mathbb G_m$ is valued in groups.  Applying the Yoneda lemma, we deduce the following formulas for the Hopf algebra structure maps:
 \begin{align*}
 \mathbb G_m \times \mathbb G_m & \xrightarrow{\mu} \mathbb G_m & x_1 \otimes x_2 & \mapsfrom x \\
 & & y_1 \otimes y_2 & \mapsfrom y, \\
@@ -264,11 +264,11 @@ This group scheme has several interesting properties, which we will merely state
 We now turn to a different class of examples, which will wind up being the key players in our upcoming topological story.  To begin, consider the colimit of the sets $\colim_{j \to \infty} \mathbb A^{1,(j)}(T)$, which is of use in algebra: it is the collection of nilpotent elements in $T$.  These kinds of conditions which are ``unbounded in $j$'' appear frequently enough that we are moved to give these functors a name too:
 \begin{definition}
 \todo{Erick points out that the morphisms in this system should be infintesimal thickenings.  Is there a functor-of-points way to recognize such things, without reaching all the way up to talking about ideals?  (He also thinks that we should allow finite type in addition to finite, but I don't think I want that. I've been wrong before, though.)}
-An \textit{affine formal scheme} is an ind-system of finite affine schemes.\footnote{This has the effect of formally adjoining colimits of filtered diagrams to the category of finite affine schemes.  In fact, a functor $X\co \CatOf{Algebras} \to \CatOf{Sets}$ which preserves finite limits is a formal scheme exactly when there exists a family of maps $X_i \to X$ from a set of affine schemes $X_i$ such that the induced map \[\coprod_i X_i(T) \to X(T)\] is jointly surjective for all test algebras $T$~\cite[Proposition 4.6]{StricklandFSFG}.}  The morphisms between two formal schemes are computed by \[\CatOf{FormalSchemes}(\{X_\alpha\}, \{Y_\beta\}) = \lim_\alpha \colim_\beta \CatOf{Schemes}(X_\alpha, Y_\beta).\]  Given affine charts $X_\alpha = \Spec R_\alpha$, we will glibly suppress the system from the notation and write \[\Spf R := \{\Spec R_\alpha\}.\]
+An \index{scheme!formal}\textit{affine formal scheme} is an ind-system of finite affine schemes.\footnote{This has the effect of formally adjoining colimits of filtered diagrams to the category of finite affine schemes.  In fact, a functor $X\co \CatOf{Algebras} \to \CatOf{Sets}$ which preserves finite limits is a formal scheme exactly when there exists a family of maps $X_i \to X$ from a set of affine schemes $X_i$ such that the induced map \[\coprod_i X_i(T) \to X(T)\] is jointly surjective for all test algebras $T$~\cite[Proposition 4.6]{StricklandFSFG}.}  The morphisms between two formal schemes are computed by \[\CatOf{FormalSchemes}(\{X_\alpha\}, \{Y_\beta\}) = \lim_\alpha \colim_\beta \CatOf{Schemes}(X_\alpha, Y_\beta).\]  Given affine charts $X_\alpha = \Spec R_\alpha$, we will glibly suppress the system from the notation and write \[\Spf R := \{\Spec R_\alpha\}.\]
 \end{definition}
 
 \begin{example}\label{FormalGaExample}
-The individual schemes $\mathbb A^{1, (j)}$ do not support group structures.  After all, the sum of two elements which are nilpotent of order $j+1$ can only be guaranteed to be nilpotent of order $2j+1$.  It follows that the entire ind-system $\{\mathbb A^{1, (j)}\} =: \A^1$ supports a group structure, even though none of its constituent pieces do.  We call such an object a \textit{formal group scheme}, and this particular formal group scheme we denote by $\G_a$.
+The individual schemes $\mathbb A^{1, (j)}$ do not support group structures.  After all, the sum of two elements which are nilpotent of order $j+1$ can only be guaranteed to be nilpotent of order $2j+1$.  It follows that the entire ind-system $\{\mathbb A^{1, (j)}\} =: \A^1$ supports a group structure, even though none of its constituent pieces do.  We call such an object a \index{scheme!formal!group scheme}\textit{formal group scheme}, and this particular formal group scheme we denote by $\G_a$.
 \end{example}
 
 \begin{example}
@@ -324,7 +324,7 @@ In this Lecture, we will fix all these deficiencies of $X_{\HFtwo}$ except for \
 We will begin by considering the grading on $\HFtwo^* X$, where $X$ is a finite complex.  In algebraic geometry, the following standard construction is used to track gradings:\footnote{Strickland gives an alternative formalism for tracking gradings~\cite[Sections 11 and 14]{StricklandFPFP} called a \emph{polarization}, which amounts to choosing a trivialization $\pi_2 E \cong \pi_0 E$ and considering the isomorphisms $\pi_{2n} E \cong (\pi_2 E)^{\otimes_{\pi_0 E} n}$.}
 
 \begin{definition}[{\cite[Definition 2.95]{StricklandFSFG}}]
-A \textit{$\Z$--grading} on a ring $R$ is a system of additive subgroups $R_k$ of $R$ satisfying $R = \bigoplus_k R_k$, $1 \in R_0$, and $R_j R_k \subseteq R_{j+k}$.  Additionally, a map $f\co R \to S$ of graded rings is said to \textit{respect the grading} if $f(R_k) \subseteq S_k$.\footnote{The terminology ``$\Z$--filtering'' might be more appropriate, but this is the language commonly used.}
+A \index{grading}{$\Z$--grading} on a ring $R$ is a system of additive subgroups $R_k$ of $R$ satisfying $R = \bigoplus_k R_k$, $1 \in R_0$, and $R_j R_k \subseteq R_{j+k}$.  Additionally, a map $f\co R \to S$ of graded rings is said to \textit{respect the grading} if $f(R_k) \subseteq S_k$.\footnote{The terminology ``$\Z$--filtering'' might be more appropriate, but this is the language commonly used.}
 \end{definition}
 
 \begin{lemma}[{\cite[Proposition 2.96]{StricklandFSFG}}]\label{GradedAndGmEquivAgree}
@@ -358,7 +358,7 @@ Second, we want to identify the role of $\mathcal A_*$ in acting on $\HFtwo^* X$
 \Spec \mathcal A_* \times X_{\HFtwo} & \xrightarrow{\alpha} X_{\HFtwo}.
 \end{align*}
 
-Having produced the action map $\alpha$, we are now moved to study $\alpha$ as well as the structure group $\Spec \mathcal A_*$ itself.  Milnor works out the Hopf algebra structure of $\mathcal A_*$ by defining elements $\xi_j \in \mathcal A_*$ dual to the \textit{$j${\th} Milnor primitive}, defined by $Q_j = [Q_{j-1}, \Sq^{2^j}] \in \mathcal A^*$.  Taking $X = \RP^n$ and $x \in \HFtwo^1(\RP^n)$ the generator, then since $\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}$ he deduces the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j \text{\quad (in $\HFtwo^* \RP^n$)}.\]  Noticing that we can take the limit $n \to \infty$ to get a well-defined infinite sum, he then makes the following calculation, stable in $n$:
+Having produced the action map $\alpha$, we are now moved to study $\alpha$ as well as the structure group $\Spec \mathcal A_*$ itself.  Milnor works out the Hopf algebra structure of $\mathcal A_*$ by defining elements $\xi_j \in \mathcal A_*$ dual to the \index{Milnor primitive}\textit{$j${\th} Milnor primitive}, defined by $Q_j = [Q_{j-1}, \Sq^{2^j}] \in \mathcal A^*$.  Taking $X = \RP^n$ and $x \in \HFtwo^1(\RP^n)$ the generator, then since $\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}$ he deduces the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j \text{\quad (in $\HFtwo^* \RP^n$)}.\]  Noticing that we can take the limit $n \to \infty$ to get a well-defined infinite sum, he then makes the following calculation, stable in $n$:
 \begin{align*}
 (\lambda^* \otimes \id) \circ \lambda^*(x) & = (\id \otimes \Delta) \circ \lambda^*(x) & \text{(coassociativity)} \\
 (\lambda^* \otimes \id) \left( \sum_{j=0}^\infty x^{2^j} \otimes \xi_j \right) & = \\
@@ -514,7 +514,7 @@ Much of the results below do not rely on working with a Hopf algebra over the fi
 \end{remark}
 
 \begin{lemma}[{\cite[Definition A1.2.1]{RavenelGreenBook}}]
-Let $A$ be a Hopf $k$--algebra, let $M$ be an $A$--comodule, and let $N$ be a $k$--module.  There is a \textit{cofree adjunction}: \[\CatOf{Comodules}_A(M, N \otimes_k A) \cong \CatOf{Modules}_k(M, N),\] where $N \otimes_k A$ is given the structure of an $A$--comodule by the coaction map \[N \otimes_k A \xrightarrow{\id \otimes \Delta} N \otimes_k (A \otimes_k A) = (N \otimes_k A) \otimes_k A.\]
+Let $A$ be a Hopf $k$--algebra, let $M$ be an $A$--comodule, and let $N$ be a $k$--module.  There is a \idxentry{cofree adjunction}: \[\CatOf{Comodules}_A(M, N \otimes_k A) \cong \CatOf{Modules}_k(M, N),\] where $N \otimes_k A$ is given the structure of an $A$--comodule by the coaction map \[N \otimes_k A \xrightarrow{\id \otimes \Delta} N \otimes_k (A \otimes_k A) = (N \otimes_k A) \otimes_k A.\]
 \end{lemma}
 \begin{proof}
 Given a map $f\co M \to N$ of $k$--modules, we can build the composite \[M \xrightarrow{\psi_M} M \otimes_k A \xrightarrow{f \otimes \id_A} N \otimes_k A.\]  Alternatively, given a map $g\co M \to N \otimes_k A$ of $A$--comodules, we build the composite \[M \xrightarrow{g} N \otimes_k A \xrightarrow{\id_N \otimes \eps} N \otimes_k k = N. \qedhere\]
@@ -536,7 +536,7 @@ X(T) \arrow["\sheaf F(T)"]{r} \arrow["X(f)"]{d} & \CatOf{Modules}_T \arrow["- \o
 X(T') \arrow["\sheaf F(T')"]{r} & \CatOf{Modules}_{T'}.
 \end{tikzcd}
 \end{center}
-(We think of the image of a particular point $t\co \Spec T \to X$ in $\CatOf{Modules}_T$ as the module of ``sections over $t$''.)  Such a presheaf is said to be a \textit{quasicoherent sheaf} when these natural transformations are all natural isomorphisms.
+(We think of the image of a particular point $t\co \Spec T \to X$ in $\CatOf{Modules}_T$ as the module of ``sections over $t$''.)  Such a presheaf is said to be a \index{sheaf!quasicoherent}\textit{quasicoherent sheaf} when these natural transformations are all natural isomorphisms.
 \end{definition}
 
 \begin{lemma}[{\cite[Proposition 2.47]{StricklandFSFG}}]\label{CorrespondenceQCohAndModules}
@@ -631,7 +631,7 @@ Consider the degenerate case $X = \HFtwo$.  Then $\HFtwo_*(\HFtwo) = \mathcal A_
 \end{example}
 
 \begin{example}
-In the slightly less degenerate case of $X = H\Z$, one can calculate \[\Cotor^{*, *}_{\mathcal A_*}(\F_2, \HFtwo_* H\Z) \cong \Cotor^{*, *}_{\Lambda[\xi_1]}(\F_2, \F_2) \cong \F_2[h_0].\]  This spectral sequence collapses, and the additive extensions cause it to converge to $\Z^\wedge_2$ in degree $0$ and $0$ in all other degrees.  The governing element $\xi_1$ is precisely the \textit{$2$--adic Bockstein}, which mediates the difference between trivial and nontrivial extensions of $\Z/2^j$ by $\Z/2$.
+In the slightly less degenerate case of $X = H\Z$, one can calculate \[\Cotor^{*, *}_{\mathcal A_*}(\F_2, \HFtwo_* H\Z) \cong \Cotor^{*, *}_{\Lambda[\xi_1]}(\F_2, \F_2) \cong \F_2[h_0].\]  This spectral sequence collapses, and the additive extensions cause it to converge to $\Z^\wedge_2$ in degree $0$ and $0$ in all other degrees.  The governing element $\xi_1$ is precisely the \index{Bockstein!2 adic@$2$--adic}\textit{$2$--adic Bockstein}, which mediates the difference between trivial and nontrivial extensions of $\Z/2^j$ by $\Z/2$.
 \end{example}
 
 \begin{example}\label{kOASSExample}
@@ -654,7 +654,7 @@ Formal geometry aside, this $kO$--based Adams spectral sequence collapses, givin
 \end{example}
 
 \begin{example}
-At the other extreme, we can pick the extremely nondegenerate case $X = \S$, where $\InternalAut_1 \G_a$ acts maximally nonfreely on $\widetilde{\F_2}$.  The resulting spectral sequence is pictured through a range in \Cref{HF2ASSFigure}.  It is worth remarking that some of the stable stems receive identifiable names in this language: for instance, the elements of $H^1_{\mathrm{gp}}(\InternalAut_1(\G_a); \widetilde{\F_2})$ are exactly the $1$--cocycles \[h_j\co \left( f = x + \sum_{j=1}^\infty \xi_j x^{2^j}\right) \mapsto \xi_j.\]  The cocycle $h_j$ transforms in the $\Gm$--character $z \mapsto z^{2^j}$, hence $h_1$ is a name for the lone element in the spectral sequence contributing to $\pi_1 \S$, which we also know to be $\eta$.  In general, the elements $h_j$ selecting the power series coefficients are called the \textit{Hopf invariant $1$ elements}, and their survival or demise in the Adams spectral sequence is directly related to the problem of putting $H$--space structures on spheres.
+At the other extreme, we can pick the extremely nondegenerate case $X = \S$, where $\InternalAut_1 \G_a$ acts maximally nonfreely on $\widetilde{\F_2}$.  The resulting spectral sequence is pictured through a range in \Cref{HF2ASSFigure}.  It is worth remarking that some of the stable stems receive identifiable names in this language: for instance, the elements of $H^1_{\mathrm{gp}}(\InternalAut_1(\G_a); \widetilde{\F_2})$ are exactly the $1$--cocycles \[h_j\co \left( f = x + \sum_{j=1}^\infty \xi_j x^{2^j}\right) \mapsto \xi_j.\]  The cocycle $h_j$ transforms in the $\Gm$--character $z \mapsto z^{2^j}$, hence $h_1$ is a name for the lone element in the spectral sequence contributing to $\pi_1 \S$, which we also know to be $\eta$.  In general, the elements $h_j$ selecting the power series coefficients are called the \idxentry{Hopf invariant $1$ elements}, and their survival or demise in the Adams spectral sequence is directly related to the problem of putting $H$--space structures on spheres.
 \citeme{VFoS problem}
 \end{example}
 
