--- a/powerops.tex
+++ b/powerops.tex
@@ -140,10 +140,10 @@ We thus set out to understand the formal schemes constituting the $E_\infty$ con
 \end{itemize}
 
 \begin{definition}
-Accordingly, we set the \textit{natural $E_\infty$ context} to be \[\Econtext{E_\Gamma} = \SpH E^0 B\Sigma_*.\]
+Accordingly, we set the \index{context!natural Einfty@natural $E_\infty$}\textit{natural $E_\infty$ context} to be \[\Econtext{E_\Gamma} = \SpH E^0 B\Sigma_*.\]
 \end{definition}
 
-The effect of this functor on classical rings is given by \Cref{HopfRingsAndRingsAdjunction}: $\Econtext{E_\Gamma}(T) = \CatOf{Algebras}_{E_\Gamma^0}(Q^* E^0 B\Sigma_*, T)$, where \[Q^* E^0 B\Sigma_* = \frac{E^0 B\Sigma_*}{\im\left(\Tr_{\Sigma_{*_1} \times \Sigma_{*_2}}^{\Sigma_{*_1 + *_2}}\co E^0 B\Sigma_{*_1} \times E^0 B\Sigma_{*_2} \to E^0 B\Sigma_{*_1 + *_2}\right)}.\]  The ideal appearing in this equation is called the \textit{transfer ideal}, written $I_{\Tr}$.
+The effect of this functor on classical rings is given by \Cref{HopfRingsAndRingsAdjunction}: $\Econtext{E_\Gamma}(T) = \CatOf{Algebras}_{E_\Gamma^0}(Q^* E^0 B\Sigma_*, T)$, where \[Q^* E^0 B\Sigma_* = \frac{E^0 B\Sigma_*}{\im\left(\Tr_{\Sigma_{*_1} \times \Sigma_{*_2}}^{\Sigma_{*_1 + *_2}}\co E^0 B\Sigma_{*_1} \times E^0 B\Sigma_{*_2} \to E^0 B\Sigma_{*_1 + *_2}\right)}.\]  The ideal appearing in this equation is called the \index{transfer ideal}\textit{transfer ideal}, written $I_{\Tr}$.
 
 \begin{remark}
 In terms of the descent spectral sequence described in the previous subsection, all of the $*$--decomposables are in the image of the $d^1$--differential, so already do not contribute to the $E^2$--page of the spectral sequence.
@@ -171,7 +171,7 @@ The effect of killing the transfer ideal in $(BC_p)_E$ is to force the image div
 
 The broad features of this example hold for a general index $j$.
 \begin{definition}
-The \textit{abelian $E_\infty$ context} is formed by considering the inclusions \[\bigvee_{\substack{A \le \Sigma_j \\ \text{$A$ abelian}}} BA \to B\Sigma_j.\]
+The \index{context!abelian Einfty@abelian $E_\infty$}\textit{abelian $E_\infty$ context} is formed by considering the inclusions \[\bigvee_{\substack{A \le \Sigma_j \\ \text{$A$ abelian}}} BA \to B\Sigma_j.\]
 \end{definition}
 \noindent A consequence of \Cref{CharacterTheorySection} is that this map is \emph{injective} on Morava $E$--cohomology, so that we can understand the natural $E_\infty$ context in terms of this larger object.  A benefit to this auxiliary context is that we can already predict its behavior in Morava $E$--theory: the cohomological formal scheme associated to an abelian group can be presented as an internal scheme of group homomorphisms, just as above.  Using this auxiliary context for reference, Strickland has proven the following results:
 
@@ -222,7 +222,7 @@ There is an isomorphism \[\Spec Q^* \pi_* L_\Gamma(E \sm E) \cong \InternalHom{F
 \noindent In order to form a comparison map between these two contexts, we will want algebraic constructions that trade a subgroup divisor (i.e., a point in the natural $E_\infty$ context) for a formal group endomorphism (i.e., a point in the unstable context).  It will be useful to phrase our ideas in the language of \emph{isogenies}.
 
 \begin{definition}[{\cite[Definition 5.17]{StricklandFSFG}}]
-Take $C$ and $D$ to be formal curves over $X$.  A map $f\co C \to C'$ is an \textit{isogeny} (of degree $d$) when the induced map $C \to C \times_X C'$ exhibits $C$ as a divisor (of rank $d$) on $C \times_X C'$ as $C'$--schemes.
+Take $C$ and $D$ to be formal curves over $X$.  A map $f\co C \to C'$ is an \index{isogeny}\textit{isogeny} (of degree $d$) when the induced map $C \to C \times_X C'$ exhibits $C$ as a divisor (of rank $d$) on $C \times_X C'$ as $C'$--schemes.
 \end{definition}
 
 \begin{remark}[{cf.\ \Cref{DivHasPushforwards}}]
@@ -251,7 +251,7 @@ Every nonzero map of formal groups over a perfect field of positive charactersit
 A map of formal groups over a complete local ring with a perfect positive-characteristic residue field is an isogeny if and only if the kernel subscheme of the map is a divisor. \qed
 \end{corollary}
 
-This last result forms the headwaters of the connection we are seeking: isogenies are exactly the class of formal group homomorphisms whose kernels form subgroup divisors.  Again, we are seeking an assignment in the opposite direction, some special collection of endoisogenies naturally attached to prescribed kernel divisors.  As a first approximation to this goal, we drop the \emph{endo-} and aim to construct just \emph{isogenies} with this kernel property, a candidate for which is a theory of \textit{quotient groups}.
+This last result forms the headwaters of the connection we are seeking: isogenies are exactly the class of formal group homomorphisms whose kernels form subgroup divisors.  Again, we are seeking an assignment in the opposite direction, some special collection of endoisogenies naturally attached to prescribed kernel divisors.  As a first approximation to this goal, we drop the \emph{endo-} and aim to construct just \emph{isogenies} with this kernel property, a candidate for which is a theory of \index{formal group!quotient}\textit{quotient groups}.
 
 \begin{definition}
 For $K \subseteq \G$ be a subgroup divisor, we define the quotient group $\G/K$ to be the formal scheme whose ring of functions is the equalizer
@@ -277,7 +277,7 @@ Let $\ell\co A \to \G$ be a level structure parametrizing a subgroup divisor $K$
 \end{corollary}
 
 \begin{definition}\label{NormForFns}
-This second construction can be upgraded to an assignment from \emph{functions} on $\G$ to \emph{functions} on $\G/K$, rather than just the ideals that they generate.  Specifically, we define the \textit{norm} of $\phi \in \sheaf O_{\G}$ along a level structure $\ell\co A \to \G$ by the formula \[N_\ell \phi = \prod_{a \in A} \tau_{\ell(a)}^* \phi.\]  An often-useful property of this norm construction is that if $\phi$ is a coordinate on $\G$, then $N_\ell \phi$ is a coordinate on $\G/K$~\cite[Theorem 5.3.1]{StricklandFiniteSubgps}.
+This second construction can be upgraded to an assignment from \emph{functions} on $\G$ to \emph{functions} on $\G/K$, rather than just the ideals that they generate.  Specifically, we define the \index{norm}\textit{norm} of $\phi \in \sheaf O_{\G}$ along a level structure $\ell\co A \to \G$ by the formula \[N_\ell \phi = \prod_{a \in A} \tau_{\ell(a)}^* \phi.\]  An often-useful property of this norm construction is that if $\phi$ is a coordinate on $\G$, then $N_\ell \phi$ is a coordinate on $\G/K$~\cite[Theorem 5.3.1]{StricklandFiniteSubgps}.
 \end{definition}
 
 \begin{remark}
@@ -410,7 +410,7 @@ x \circ \mu^{C_p}_{MUP} \circ \Delta = \mu^{C_p}_{E_\Gamma} \circ x^{\sm p}_{hC_
 We now expand the algebraic condition that this last Corollary encodes.  The power operation for $MUP$ was described in \Cref{AjAndBjAreInTheFGLSubring}, where we found that it applies the norm construction to $f$ for the universal $\Z/p$--level structure on $\G$.  The cyclic power operation on Morava $E$--theory was determined in the previous section to act by pullback along the deformation of Frobenius isogeny associated to the same universal level structure.  This condition is important enough to warrant a name:
 
 \begin{definition}\label{NormCoherentDefn}
-A coordinate $\phi\co \G \to \A^1$ on a Lubin--Tate group $\G$ is said to be \textit{norm-coherent} when for all subgroups $K \subseteq \G$, we have that $N_K \phi$ and $\psi_K^* \phi$ are related by the isomorphism $g_K$.
+A coordinate $\phi\co \G \to \A^1$ on a Lubin--Tate group $\G$ is said to be \index{norm-coherent}\textit{norm-coherent} when for all subgroups $K \subseteq \G$, we have that $N_K \phi$ and $\psi_K^* \phi$ are related by the isomorphism $g_K$.
 \end{definition}
 
 \begin{corollary}
@@ -496,16 +496,16 @@ We can apply these observations to $E_{\widehat C}$, the Morava $E$--theory for 
 
 \section{The spectrum of modular forms}\label{ConstructionOfTMFSection}
 
-The introduction of the geometry of $E_\infty$ ring spectra has borne out a second version of the $\sigma$--orientation, summarized as a map of $E_\infty$ ring spectra \[\sigma\co M\String \to \tmf.\]  This map has \emph{extremely} good properties, not only owing to it being a map of structured ring spectra but to the object $\tmf$ itself, not heretofore discussed.  This is one variant of the spectrum of \textit{topological modular forms}, which comes about from the following daydream: according to \Cref{EllipticSpectraAreOriented} and \Cref{EllipticSpectraAreOrientedByString}, every elliptic spectrum is naturally oriented, and the system of orientations should give rise to a $\String$--orientation of the homotopy limit over all elliptic spectra, itself a kind of ``universal'' elliptic spectrum.  There are several delicate points to this: the limit of a diagram of rings need not be a complex-orientable ring spectrum (cf.\ the $C_2$--equivariant spectrum $KU$); this diagram is very large; and the diagram exists only in the homotopy category and contains loops, so ``homotopy limit'' is not automatically defined without finding a lift to a more structured context.
+The introduction of the geometry of $E_\infty$ ring spectra has borne out a second version of the $\sigma$--orientation, summarized as a map of $E_\infty$ ring spectra \[\sigma\co M\String \to \tmf.\]  This map has \emph{extremely} good properties, not only owing to it being a map of structured ring spectra but to the object $\tmf$ itself, not heretofore discussed.  This is one variant of the spectrum of \index{topological modular forms}\textit{topological modular forms}, which comes about from the following daydream: according to \Cref{EllipticSpectraAreOriented} and \Cref{EllipticSpectraAreOrientedByString}, every elliptic spectrum is naturally oriented, and the system of orientations should give rise to a $\String$--orientation of the homotopy limit over all elliptic spectra, itself a kind of ``universal'' elliptic spectrum.  There are several delicate points to this: the limit of a diagram of rings need not be a complex-orientable ring spectrum (cf.\ the $C_2$--equivariant spectrum $KU$); this diagram is very large; and the diagram exists only in the homotopy category and contains loops, so ``homotopy limit'' is not automatically defined without finding a lift to a more structured context.
 
 The goal of this Lecture is to sketch out both the ingredients and the recipe for constructing this object.  We aren't going to prove the main theorem in full detail, as the details are so thick that they do not admit a more reasonable presentation than what Beherns has already given~\citeme{Behrens}.  The idea is to make use of the obstruction theory that $E_\infty$ rings garner us, and to ``work locally'' on a particular class of examples where the obstruction theory is well-behaved, using these to carefully exhaust the problem.  We begin with a precise definition of what ``locally'' means in this setting:
 
 \begin{definition}[{\cite[Definition 6.2.2.6, Section 6.5]{LurieHTT}}]
-A \textit{$\CatOf{D}$--valued sheaf} on a site $\CatOf{C}$ is a functor $F\co \CatOf C \to \CatOf D$ that converts \v{C}ech diagrams to homotopy limit diagrams.
+A \index{sheaf!infty sheaf@$\infty$--sheaf}\textit{$\CatOf{D}$--valued sheaf} on a site $\CatOf{C}$ is a functor $F\co \CatOf C \to \CatOf D$ that converts \v{C}ech diagrams to homotopy limit diagrams.
 \end{definition}
 
 \begin{definition}[{\cite[Remark 4.1]{GoerssTMF}}]
-Let $f\co \stack N \to \moduli{fg}$ be a flat, representable morphism of stacks.  A \textit{topological enrichment} of $\stack N$ is a sheaf of $E_\infty$ ring spectra $\sheaf O$ on $\stack N$ such that\footnote{In particular, $\pi_0 \sheaf O$ recovers the structure sheaf of $\stack N$.} \[\pi_n \circ \sheaf O \cong \begin{cases} f^* \omega^{\otimes k} & \text{if $n = 2k$ is even}, \\ 0 & \text{if $n$ is odd}. \end{cases}\]
+Let $f\co \stack N \to \moduli{fg}$ be a flat, representable morphism of stacks.  A \index{topological enrichment}\textit{topological enrichment} of $\stack N$ is a sheaf of $E_\infty$ ring spectra $\sheaf O$ on $\stack N$ such that\footnote{In particular, $\pi_0 \sheaf O$ recovers the structure sheaf of $\stack N$.} \[\pi_n \circ \sheaf O \cong \begin{cases} f^* \omega^{\otimes k} & \text{if $n = 2k$ is even}, \\ 0 & \text{if $n$ is odd}. \end{cases}\]
 \end{definition}
 
 Fix a fixed map $f\co \stack N \to \moduli{fg}$, this has its own associated moduli problem of topological enrichments of $f$.
@@ -518,7 +518,7 @@ The moduli of topological enrichments of $\moduli{ell}$, the moduli of elliptic 
 It is in this sense that we will work locally: we will construct a topological enrichment of $\moduli{ell}$ by doing so locally, then gluing the resulting local definitions together along common subsets to generate a sheaf on the entire object.  We first divide $\moduli{ell}$ up over primes by passing to the $p$--completion, then we further divide the $p$--complete moduli itself into two regions via the following result:
 
 \begin{lemma}
-The $p$--divisible group of an elliptic curve is either formal of height $2$ (called the \textit{supersingular} case) or an extension of an \'etale $p$--divisible group of height $1$ by a formal group of height $1$ (called the \text{ordinary} case).
+The $p$--divisible group of an elliptic curve is either formal of height $2$ (called the \index{elliptic curve!supersingular}\textit{supersingular} case) or an extension of an \'etale $p$--divisible group of height $1$ by a formal group of height $1$ (called the \index{elliptic curve!ordinary}\text{ordinary} case).
 \end{lemma}
 \begin{proof}
 The category of Dieudonn\'e modules with quasi-isogenies inverted becomes semisimple, and the simple components all take the form \[M_{m, n} = \Cart_{\overline{\F}_p} / (V^m = F^n),\] for $m$ and $n$ copromise.  An abelian variety is always isogenous to its dual, and hence in this semisimple category the Dieudonn\'e module associated to an abelian variety decomposes into a Cartier self-symmetric sum of generators.  An abelian variety of dimension $d$ has $p$--divisible group of height $2d$, and Cartier duality on these simple components obeys the formula $DM_{m,n} = M_{n,m}$, from which it follows that the only possibilities for the quasi-isogenous components of a $p$--divisible group associated to an elliptic curve are $M_{1,1}$ and $M_{1,0} \oplus M_{0,1}$.
@@ -564,7 +564,7 @@ Let $\Gamma$ be a finite height formal group over a perfect field.  The moduli o
 Now we use the reduction above to extract from this a topological enrichment of $\widehat{\moduli{ell}^{\ss}}$: the enrichment sheaf arises as the pullback of the Goerss--Hopkins--Miller sheaf along the Serre--Tate map \[\widehat{\moduli{ell}^{\ss}} = \coprod_{\text{s.s.\ $C$}} (\moduli{ell})^\wedge_C \xrightarrow{\text{f.\'e.}} \coprod_{\text{s.s.\ $C$}} (\moduli{pdiv}(2))^\wedge_{C[p^\infty]} \xleftarrow{\cong} \coprod_{\text{s.s.\ $C$}} (\moduli{fg})^\wedge_{\widehat C}.\]
 
 \begin{remark}
-This buys more than just a bouquet of Morava $E$--theories, or even the global sections \[\sheaf O^{\ss}\left(\widehat{\moduli{ell}^{\ss}}\right) = \prod_{\text{supersingular $C$}} E_{\widehat C}^{h\Aut C}.\]  For instance, the moduli $\moduli{ell}^{\ss}(N)$ of supersingular elliptic curves $C$ equipped with a level--$N$ structure\footnote{A \textit{level--$N$ structure} is a specified isomorphism $C[N] \cong (\Z/N)^{\times 2}$, i.e., a choice of basis for the $N$--torsion.} forms an \'etale cover of $\moduli{ell}^{\ss}$ whenever $p \nmid N$, and hence this sheaf produces a spectrum $\TMF(N)^{\ss} = \sheaf O^{\ss}(\moduli{ell}^{\ss}(N))$ satisfying $(\TMF(N)^{\ss})^{hGL_2(\Z/N)} \simeq \TMF^{\ss}$.
+This buys more than just a bouquet of Morava $E$--theories, or even the global sections \[\sheaf O^{\ss}\left(\widehat{\moduli{ell}^{\ss}}\right) = \prod_{\text{supersingular $C$}} E_{\widehat C}^{h\Aut C}.\]  For instance, the moduli $\moduli{ell}^{\ss}(N)$ of supersingular elliptic curves $C$ equipped with a level--$N$ structure\footnote{A \index{level N structure@level--$N$ structure}\textit{level--$N$ structure} is a specified isomorphism $C[N] \cong (\Z/N)^{\times 2}$, i.e., a choice of basis for the $N$--torsion.} forms an \'etale cover of $\moduli{ell}^{\ss}$ whenever $p \nmid N$, and hence this sheaf produces a spectrum $\TMF(N)^{\ss} = \sheaf O^{\ss}(\moduli{ell}^{\ss}(N))$ satisfying $(\TMF(N)^{\ss})^{hGL_2(\Z/N)} \simeq \TMF^{\ss}$.
 \end{remark}
 
 
@@ -575,7 +575,7 @@ This buys more than just a bouquet of Morava $E$--theories, or even the global s
 
 \subsection*{The ordinary locus}
 
-We now turn to the ordinary locus, which constitutes the bulk of the problem: remember that the supersingular locus was essentially discrete, and we are setting out to construct a sheaf, which means that we will be manufacturing a \emph{lot} of spectra.  The main tool for analyzing this situation is a specialization of the obstruction theory of Goerss--Hopkins--Miller.  First, note that completed $p$--adic $K$--homology (i.e., continuous Morava $E$--theory for $\G_m$) carries an action by $\Aut \G_m$, and using the results of \Cref{PowerOpnsSection} this extends to an action by $\End \G_m$ using the $p${\th} power operation.  In turn, the completed $p$--adic $K$--homology of an $E_\infty$ ring spectrum carries an action by $\End \G_m$, which is sometimes referred to as the structure of a \textit{$\theta$--algebra}.  To be more explicit:
+We now turn to the ordinary locus, which constitutes the bulk of the problem: remember that the supersingular locus was essentially discrete, and we are setting out to construct a sheaf, which means that we will be manufacturing a \emph{lot} of spectra.  The main tool for analyzing this situation is a specialization of the obstruction theory of Goerss--Hopkins--Miller.  First, note that completed $p$--adic $K$--homology (i.e., continuous Morava $E$--theory for $\G_m$) carries an action by $\Aut \G_m$, and using the results of \Cref{PowerOpnsSection} this extends to an action by $\End \G_m$ using the $p${\th} power operation.  In turn, the completed $p$--adic $K$--homology of an $E_\infty$ ring spectrum carries an action by $\End \G_m$, which is sometimes referred to as the structure of a \index{theta algebra@$\theta$--algebra}\textit{$\theta$--algebra}.  To be more explicit:
 \begin{theorem}[McClure]
 The homotopy of a $K(1)$--local commutative $K_p$--algebra spectrum $R$, such as $\widehat L_1 (K_p \sm E)$, carries an extra family of ring operations $\psi^k$ indexed on $k \in \Z_p$, as well as a ring map $\theta$,\footnote{If $E_*$ is torsion-free, then the last condition means that $\theta$ is redundant.} such that
 \pushQED{\qed}
@@ -589,7 +589,7 @@ The homotopy of a $K(1)$--local commutative $K_p$--algebra spectrum $R$, such as
 \end{theorem}
 \noindent Goerss--Hopkins--Miller obstruction theory reverses this information flow by seeking answers to the questions:
 \begin{itemize}
-    \item Given a $\theta$--algebra $A$, what is the moduli of $E_\infty$ rings whose completed $p$--adic $K$--homology is isomorphic to $A$, called a \textit{realization} of $A$?\footnote{Note that the homotopy of $E$ itself can be recovered from that of $R = \widehat L_1 (K_p \sm E)$ by taking fixed points for the $\Z_p^\times$--action, i.e., by an Adams spectral sequence.}
+    \item Given a $\theta$--algebra $A$, what is the moduli of $E_\infty$ rings whose completed $p$--adic $K$--homology is isomorphic to $A$, called a \index{theta algebra@$\theta$--algebra!realization}\textit{realization} of $A$?\footnote{Note that the homotopy of $E$ itself can be recovered from that of $R = \widehat L_1 (K_p \sm E)$ by taking fixed points for the $\Z_p^\times$--action, i.e., by an Adams spectral sequence.}
     \item Given a map $f\co A \to B$ of $\theta$--algebras, as well as specified realizations $R$ and $S$ of $A$ and $B$ respectively, what is the moduli of maps $R \to S$ of $E_\infty$ rings which realize to $f$?
 \end{itemize}
 
@@ -657,7 +657,7 @@ The last thing we have to do to construct the pullback square is to manufacture 
 There is an elliptic curve $C^{\alg}$ over an affine $\Spf ((V^\wedge_\infty)^{\ss})$ such that $(\TMF^{\ss})^{\ord}$ is an elliptic spectrum for this curve.
 \end{lemma}
 \begin{proof}[Remarks on proof]
-This comes down to \textit{algebraization}: in certain cases involving formal schemes, one can guarantee the existence of extensions of the following form:
+This comes down to \index{algebraization}\textit{algebraization}: in certain cases involving formal schemes, one can guarantee the existence of extensions of the following form:
 \begin{center}
 \begin{tikzcd}
 \Spf A \arrow{r} \arrow{d} & X \arrow{d} \\
@@ -1022,7 +1022,7 @@ An interesting feature of the Lemma is the auxiliary index $N$, which is \emph{n
 \end{remark}
 
 \begin{remark}
-With this computation in hand, the $p$--local operations $KU_{(p)} \sm KU_{(p)}$ can be recovered from arithmetic fracture, as can the global operations $KU \sm KU$.  The answer is quite similar: $\pi_0 KU \sm KU$ is populated by rational polynomials which evaluate to integers on all integer inputs, called \textit{numerical polynomials}.
+With this computation in hand, the $p$--local operations $KU_{(p)} \sm KU_{(p)}$ can be recovered from arithmetic fracture, as can the global operations $KU \sm KU$.  The answer is quite similar: $\pi_0 KU \sm KU$ is populated by rational polynomials which evaluate to integers on all integer inputs, called \index{numerical polynomials}\textit{numerical polynomials}.
 \end{remark}
 
 We now pass from $KU$ to $KO$.  To begin, use the Tate trick
