--- a/main.tex
+++ b/main.tex
@@ -36,10 +36,8 @@
 \tableofcontents
 
 \todo[inline]{I would like as few section titles as possible to involve people's names.}
-\todo[inline]{Compile an index by replacing all the \texttt{textit} commands in definition environments with some more fancy macro that tags it for inclusion.  There's information on how indices are compiled here: https://en.wikibooks.org/wiki/LaTeX/Indexing.}
 \todo[inline]{Make sure you use either $\id$ or $1$ everywhere to denote the identity morphism.}
 \todo[inline]{You're not very consistent about using $\G$ or $\Gamma$ to denote an arbitrary formal group. It seems like you use one or the other based on your preference of whether it has finite height or not.}
-\todo[inline]{Make sure that ``Case Study'' and ``Lecture'' are OK names by the publisher's standards. If they aren't, do a careful search-and-replace for them.}
 \todo[inline]{Double check that you're careful about choosing consistent names for your objects: $S = \Spec R$ is the base scheme, that sort of thing.}
 \todo[inline]{Be consistent about $\sheaf O_X$ vs $\sheaf O(X)$, and similarly with $\sheaf I_D$ versus $\sheaf I(D)$.}
 \todo[inline]{Be consistent about ``$\S$'' versus ``$\S^0$'' for the standard sphere spectrum.}
@@ -89,6 +87,11 @@
 
 \bibliographystyle{alpha}
 \bibliography{main}
+
+
+
+\cleardoublepage
+\printindex
 
 
 
